fix: address SonarQube issues in branch-modified files
- Use var, toList(), IllegalStateException where applicable
- Make static methods that don't use instance state
- Rename ambiguous local/field names (serverContextObjectProvider, mdoConfiguration)
- Remove unused parameters (analysisInfo, parsedStrTemplateMethods, reference)
- Fix unchecked cast in DiagnosticInfosFactory with @SuppressWarnings + type witness
- Fix static wrap() ambiguity in ContextPropagatingExecutorService (explicit lambda)
- Revert invalid private constructor in InlayHintsConfiguration (@Configuration CGLIB)
- Remove unused imports and variables

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>